--- a/src/_includes/en/doc_menu.html
+++ b/src/_includes/en/doc_menu.html
@@ -948,8 +948,8 @@
 						<ul data-submenu="!Matreshka.binders">
 							
 								<li>
-									<a href="#!Matreshka.binders.innerHTML" title="Returns data binder which changes innerHTML of bound DOM node depending on instance property value." data-name="binders.innerHTML" data-since="0.1">
-										innerHTML
+									<a href="#!Matreshka.binders.html" title="Returns data binder which changes innerHTML of bound DOM node depending on instance property value." data-name="binders.html" data-since="0.1">
+										html
 									</a>
 								</li>
 							
@@ -966,14 +966,14 @@
 								</li>
 							
 								<li>
-									<a href="#!Matreshka.binders.property" title="Returns data binder which changes given property of DOM node depending on instance property value." data-name="binders.property" data-since="0.3">
-										property
+									<a href="#!Matreshka.binders.prop" title="Returns data binder which changes given property of DOM node depending on instance property value." data-name="binders.prop" data-since="0.3">
+										prop
 									</a>
 								</li>
 							
 								<li>
-									<a href="#!Matreshka.binders.attribute" title="Returns data binder which changes an attribute of DOM node depending on instance property value" data-name="binders.attribute" data-since="0.3">
-										attribute
+									<a href="#!Matreshka.binders.attr" title="Returns data binder which changes an attribute of DOM node depending on instance property value" data-name="binders.attr" data-since="0.3">
+										attr
 									</a>
 								</li>
 							
@@ -1002,8 +1002,8 @@
 								</li>
 							
 								<li>
-									<a href="#!Matreshka.binders.innerText" title="Returns data binder which changes innerText of bound DOM node depending on instance property value." data-name="binders.innerText" data-since="1.1">
-										innerText
+									<a href="#!Matreshka.binders.text" title="Returns data binder which changes textContent of bound DOM node depending on instance property value." data-name="binders.text" data-since="1.1">
+										text
 									</a>
 								</li>
 							
