--- a/src/_includes/ru/doc_menu.html
+++ b/src/_includes/ru/doc_menu.html
@@ -948,8 +948,8 @@
 						<ul data-submenu="!Matreshka.binders">
 							
 								<li>
-									<a href="#!Matreshka.binders.innerHTML" title="Возвращает привязчик, меняющий innerHTML DOM элемента в зависимости от значения свойства экземпляра класса" data-name="binders.innerHTML" data-since="0.1">
-										innerHTML
+									<a href="#!Matreshka.binders.html" title="Возвращает привязчик, меняющий innerHTML DOM элемента в зависимости от значения свойства экземпляра класса" data-name="binders.html" data-since="0.1">
+										html
 									</a>
 								</li>
 							
@@ -966,14 +966,14 @@
 								</li>
 							
 								<li>
-									<a href="#!Matreshka.binders.property" title="Возвращает привязчик, меняющий свойство DOM элемента на значение свойства экземпляра класса" data-name="binders.property" data-since="0.3">
-										property
+									<a href="#!Matreshka.binders.prop" title="Возвращает привязчик, меняющий свойство DOM элемента на значение свойства экземпляра класса" data-name="binders.prop" data-since="0.3">
+										prop
 									</a>
 								</li>
 							
 								<li>
-									<a href="#!Matreshka.binders.attribute" title="Возвращает привязчик, меняющий атрибут DOM элемента на значение свойства экземпляра класса" data-name="binders.attribute" data-since="0.3">
-										attribute
+									<a href="#!Matreshka.binders.attr" title="Возвращает привязчик, меняющий атрибут DOM элемента на значение свойства экземпляра класса" data-name="binders.attr" data-since="0.3">
+										attr
 									</a>
 								</li>
 							
@@ -1002,8 +1002,8 @@
 								</li>
 							
 								<li>
-									<a href="#!Matreshka.binders.innerText" title="Возвращает привязчик, меняющий innerText (текстовое содержимое) DOM элемента в зависимости от значения свойства экземпляра класса." data-name="binders.innerText" data-since="1.1">
-										innerText
+									<a href="#!Matreshka.binders.text" title="Возвращает привязчик, меняющий textContent (текстовое содержимое) DOM элемента в зависимости от значения свойства экземпляра класса." data-name="binders.text" data-since="1.1">
+										text
 									</a>
 								</li>
 							
