--- a/src/_includes/en/doc_content.html
+++ b/src/_includes/en/doc_content.html
@@ -1116,6 +1116,11 @@ this.x = 3; // does nothing</code></pre>
 	</p>
 	
 	
+	<p>
+		<b>Fires</b> <span class="event">removeevent</span> <span class="event">removeevent:NAME</span>
+
+	</p>
+	
 
 	
 	<h4>Arguments</h4>
