--- a/src/_includes/ru/doc_content.html
+++ b/src/_includes/ru/doc_content.html
@@ -1116,6 +1116,11 @@ this.x = 3; // ничего не делает</code></pre>
 	</p>
 	
 	
+	<p>
+		<b>Генерирует события</b> <span class="event">removeevent</span> <span class="event">removeevent:NAME</span>
+
+	</p>
+	
 
 	
 	<h4>Аргументы</h4>
@@ -11339,6 +11344,21 @@ magic.mediate(object, 'z', Number);
 <p>1) Благодаря использованию акцессоров в качестве "слушателя" данных Матрешка сильно выигрывает у фреймворков, использующих другие подходы (например, dirty-checking).</p>
 <p>2) Матрешка напрямую меняет DOM и, при увеличении количества байндингов, скорость приложения уменьшается по линейному закону. Этот способ взаимодействия с элементами на странице ставится в противоположность решений на основе "посредников" между объектной моделью документа и данными. Во фреймворках, использующих так называемый "virtual DOM", при большом количестве элементов (например, при рендеринге коллекций), скорость падает по экспоненте, отбирая у разработчика возможность работы с большими массивами данных.</p>
 <h3>10. Поддержка синтаксиса ECMAScript 2015</h3><p>Поддержка JavaScript следующего поколения является одной из самых приоритетных задач. На сегодняшний день, Матрешка, кроме основных возможностей ECMAScript 2015/7, поддерживает классы и циклы <code>for..of</code>. В дальнейшем, при развитии языка ES, новые возможности будут добавляться в первую очередь.</p></article><article id="!whats-new"><h2><a href="#!whats-new">Что нового?</a></h2><p>Не забывайте голосовать за новые возможности в <a href="https://trello.com/b/E5KcQESk/matreshka-js-features">trello</a>.</p>
+<h3><a href="https://github.com/finom/matreshka/releases/tag/v1.3.0">Матрешка 1.3.0</a></h3><ul>
+<li>Новый метод  <a href="#!Matreshka.Array-restore">Matreshka.Array#restore</a></li>
+<li>Некоторые байндеры из <a href="#!Matreshka.binders">Matreshka.binders</a> переименованы (старые названия будут по-прежнему работать)<ul>
+<li><code>innerHTML</code> -&gt; <a href="#!Matreshka.binders.html">html</a></li>
+<li><code>innerText</code> -&gt; <a href="#!Matreshka.binders.text">text</a></li>
+<li><code>property</code> -&gt; <a href="#!Matreshka.binders.prop">prop</a></li>
+<li><code>attribute</code> -&gt; <a href="#!Matreshka.binders.attr">attr</a></li>
+</ul>
+</li>
+<li>Байндеры <code>html</code> и <code>text</code> поддерживают двустороннее связывание при использовании атрибута <code>"contenteditable"</code>.</li>
+<li>Новые события <code>"removeevent"</code> и <code>"removeevent:NAME"</code>, вызывающиеся при удалении события.</li>
+<li><a href="#!Matreshka.Array-itemRenderer">Matreshka.Array#itemRenderer</a> не обязательно должен быть валидным HTML элементом. Теперь, если HTML строка содержит несколько узлов (HTML или текстовых), она оборачивается в <code>span</code>.</li>
+<li>Балалайка поддерживает любые объекты, а не только DOM узлы.</li>
+<li>Изменения в способе подключения исходника Матрешки при помощи AMD.</li>
+</ul>
 <h3><a href="https://github.com/finom/matreshka/releases/tag/v1.2.0">Матрешка 1.2.0</a></h3><ul>
 <li>Добавлено виртуальное свойство <a href="#!Matreshka.Array-trackBy">Matreshka.Array#trackBy</a></li>
 <li>Исправлена ошибка в <a href="#!Matreshka.to">Matreshka.to</a></li>
