added examples; moved back appcache; added share buttons  to methods and properties; added 2 sponsor logo; removed who uses; added DBMON link

--- a/src/_includes/en/performance.html
+++ b/src/_includes/en/performance.html
@@ -34,5 +34,8 @@
         <option value="ie">Internet Explorer
     </select>
 
-    <p><br>Based on <a class="benchmark-url" target="_blank">this</a> benchmark</p>
+    <p><br>Based on <a class="benchmark-url" target="_blank">this</a> benchmark<br><br>
+        And check out <a href="http://mathieuancelin.github.io/js-repaint-perfs/matreshka/index.html">DMBON test</a>
+    </p>
+
 </div>
