--- a/src/_includes/en/promo.html
+++ b/src/_includes/en/promo.html
@@ -15,9 +15,15 @@ app.x = 'Two-way data binding in JS? O rly?';
 			<a href="https://github.com/finom/matreshka/archive/v{{ site.data.package.version }}.zip" download class="download-btn">Download <i></i></a>
 			<a href="https://github.com/finom/matreshka" class="github-btn">Github <i></i></a>
 		</p>
-		<div class="main-sponsor">
-		    The main sponsor<br>
-		    <a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
+
+		<div class="sponsors">
+			<h3>Who's helping to the project?</h3>
+			<div class="main-sponsor">
+				The main sponsor<br>
+			    <a href="http://shooju.com" target="_blank"><img src="img/logos/shooju.png"></a>
+			</div>
+			<a href="http://habrahabr.ru/company/matreshka/"><img src="img/logos/habrahabr.svg" height="70"></a>
+			<a href="https://www.browserstack.com/"><img src="img/logos/browserstack.svg" height="60"></a>
 		</div>
 		{% include en/performance.html %}
 		{% include en/extras.html %}
