--- a/src/_includes/ru/extras.html
+++ b/src/_includes/ru/extras.html
@@ -1,4 +1,4 @@
-<div class="logos row">
+<!--<div class="logos row hide">
     <div  class="col s12 m6 offset-m3">
         <h4>Кто использует Матрешку?</h4>
         <p>
@@ -14,7 +14,7 @@
             </p>
         </details>
     </div>
-</div>
+</div>-->
 
 <details class="thanks">
     <summary>Отдельное спасибо...</summary>
