--- a/src/_includes/ru/nav.html
+++ b/src/_includes/ru/nav.html
@@ -17,6 +17,7 @@
 	</div>
 	{% include ru/doc_menu.html %}
 	<a href="#!matreshka-magic" data-since="1.1">MatreshkaMagic</a>
+	<a href="#!examples">Примеры</a>
 	<a href="#!10-reasons">10 причин попробовать</a>
 	<a href="#!whats-new">Что нового?</a>
 	<a href="#!faq">FAQ</a>
