--- a/src/_includes/ru/performance.html
+++ b/src/_includes/ru/performance.html
@@ -34,5 +34,8 @@
         <option value="ie">Internet Explorer
     </select>
 
-    <p>На основе <a class="benchmark-url" target="_blank">этого</a> бенчмарка</p>
+    <p>
+        На основе <a class="benchmark-url" target="_blank">этого</a> бенчмарка<br><br>
+        А еще взгляните на <a href="http://mathieuancelin.github.io/js-repaint-perfs/matreshka/index.html">DMBON test</a>
+    </p>
 </div>
