--- a/template/tmpl/comments.html
+++ b/template/tmpl/comments.html
@@ -6,3 +6,7 @@
   data-channel="Matreshka"
   data-show_online="false"
   data-upload="false"></div>
+
+<div class="share-buttons">
+    <a class="share-facebook"></a> <a class="share-twitter"></a>
+</div>
