--- a/src/_includes/en/extras.html
+++ b/src/_includes/en/extras.html
@@ -1,4 +1,4 @@
-<div class="logos row">
+<!--<div class="logos hide">
     <div  class="col s12 m6 offset-m3">
         <h4>Who's using Matreshka?</h4>
         <p>
@@ -14,7 +14,7 @@
             </p>
         </details>
     </div>
-</div>
+</div>--> 
 
 <details class="thanks">
     <summary>Special thanks to...</summary>
