--- a/src/_includes/en/nav.html
+++ b/src/_includes/en/nav.html
@@ -18,6 +18,7 @@
 	{% include en/doc_menu.html %}
 	<a href="#!matreshka-magic" data-since="1.1">MatreshkaMagic</a>
 	<a>Tutorial (really soon)</a>
+	<a href="#!examples">Examples</a>
 	<a href="#!faq">FAQ</a>
 	<a href="https://github.com/finom/matreshka/releases">What's new?</a>
 	<a href="forum/" target="_blank" class="forum-link">Forum</a>
