--- a/src/_layouts/main.html
+++ b/src/_layouts/main.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html nomanifest>
+<html manifest="matreshka.appcache">
 	<head>
 		<title>{{ page.title }}</title>
+		<meta name="description" content="{{ page.description }}">
 		<link rel="stylesheet" href="css/screen.css">
 		<meta name="viewport" content="initial-scale=1, width=device-width">
 		<meta charset="UTF-8">
