--- a/src/sass/site/_main.scss
+++ b/src/sass/site/_main.scss
@@ -46,6 +46,30 @@ main {
 			}
 		}
 
+		.share-buttons {
+			float: right;
+			margin-top: 1rem;
+		}
+
+		.share-facebook, .share-twitter {
+			height: 2rem;
+			cursor: pointer;
+			background-repeat: no-repeat;
+			background-size: cover;
+			display: inline-block;
+		}
+
+		.share-facebook {
+			width: 2rem;
+			background-image: inline-image("facebook-icon.svg");
+		}
+
+		.share-twitter {
+			margin-left: .5rem;
+			background-image: inline-image("twitter-icon.svg");
+			width: 2rem*1.22;
+		}
+
 		@media #{$small-and-down} {
 			&.new {
 				h2 a {
