--- a/template/tmpl/property.html
+++ b/template/tmpl/property.html
@@ -18,6 +18,9 @@
 		<?js= obj.cool ? '<i class="cool" title="'+this.lang.cool+'"></i>' : '' ?>
 		<span class="new-badge"></span>
 	</h2>
+	<?js if(obj.since) {?>
+		<div class="since"><p><?js= this.lang.since ?> <?js= obj.since ?>.</p></div>
+	<?js }?>
 	<div class="summary"><?js= obj.summary ?></div>
 	<div class="description"><?js= obj.description ?></div>
 	<?js print( this.partial( 'see.html', obj.see ) ) ?>
