added supported browsers

--- a/src/_includes/en/nav.html
+++ b/src/_includes/en/nav.html
@@ -20,6 +20,7 @@
 	<a>Tutorial (really soon)</a>
 	<a href="#!examples">Examples</a>
 	<a href="#!faq">FAQ</a>
+	<a href="#!caniuse">Supported browsers</a>
 	<a href="https://github.com/finom/matreshka/releases">What's new?</a>
 	<a href="forum/" target="_blank" class="forum-link">Forum</a>
 	<a href="//ru.matreshka.io" class="another-language"><i></i> In Russian</a>
