--- a/src/_includes/ru/nav.html
+++ b/src/_includes/ru/nav.html
@@ -21,6 +21,7 @@
 	<a href="#!10-reasons">10 причин попробовать</a>
 	<a href="#!whats-new">Что нового?</a>
 	<a href="#!faq">FAQ</a>
+	<a href="#!caniuse">Поддержка браузерами</a>
 	<a href="forum/" target="_blank" class="forum-link">Форум</a>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">Туториал</a>
 	<a href="//matreshka.io" class="another-language"><i></i> English version</a>
