added link to the chat

--- a/src/_includes/en/promo.html
+++ b/src/_includes/en/promo.html
@@ -16,6 +16,8 @@ app.x = 'Two-way data binding in JS? O rly?';
 			<a href="https://github.com/finom/matreshka" class="github-btn">Github <i></i></a>
 		</p>
 
+		<p><a href="https://gitter.im/matreshkajs/matreshka/">Join Matreshka chat</a></p>
+
 		<div class="sponsors">
 			<h3>Who's helping to the project?</h3>
 			<div class="main-sponsor">
