--- a/src/_layouts/main.html
+++ b/src/_layouts/main.html
@@ -32,6 +32,7 @@
 		<meta name="msapplication-config" content="icons/browserconfig.xml">
 		<meta name="theme-color" content="#8BC34A">
 		<meta name="google-site-verification" content="h6PRRaItZUtT98WEfeFWdOwlBs3eYUaq4EnFjBLtvAM">
+		<meta property="og:image" content="http://matreshka.io/img/mk_logo.png">
 		<style>
 			.loader {
 				position: fixed;
