--- a/src/_includes/ru/promo.html
+++ b/src/_includes/ru/promo.html
@@ -4,6 +4,7 @@
 		<img src="img/mk5-logo_text.svg" class="mk-logo-text">
 		<span class="version">v{{ site.data.package.version }}</span>
 		<p class="slogan">Event-driven JavaScript фреймворк</p>
+
 		<pre class="prettyprint lang-html" style="max-width: 540px; margin: 0 auto; text-align: left;"><code>&lt;script src=&quot;matreshka.min.js&quot;&gt;&lt;/script&gt;
 &lt;input type=&quot;text&quot; class=&quot;my-input&quot;&gt;
 &lt;script&gt;
@@ -11,11 +12,14 @@ var app = new Matreshka();
 app.bindNode('x', '.my-input');
 app.x = 'Двустороннее связывание данных в JS? Серьезно?';
 &lt;/script&gt;</code></pre>
+
 		<p>
 			<a href="https://github.com/finom/matreshka/archive/v{{ site.data.package.version }}.zip" download class="download-btn">Скачать <i></i></a>
 			<a href="https://github.com/finom/matreshka" class="github-btn">Github <i></i></a>
 		</p>
-	
+
+		<p><a href="https://gitter.im/matreshkajs/matreshka/ru">Чатик Матрешки</a></p>
+
 		<div class="sponsors">
 			<h3>Кто помогает проекту?</h3>
 			<div class="main-sponsor">
