--- a/src/_layouts/main.html
+++ b/src/_layouts/main.html
@@ -84,6 +84,8 @@
 				<a class="next-page"></a>
 			</div>
 		</script>
+		<script src="js/browser-polyfill.js"></script>
 		<script src="js/app.min.js"></script>
+
 	</body>
 </html>
