embed TodoMVC via gh-embed; get rid of TodoMVC page

--- a/src/_includes/en/nav.html
+++ b/src/_includes/en/nav.html
@@ -11,14 +11,13 @@
 	<div class="submenu-wrapper">
 		<ul data-submenu="!getting-started">
 			<li><a href="#!hello-world">Hello World</a>
-			<li><a href="#!todomvc">TodoMVC</a>
+			<li><a href="#!examples">Examples</a>
 			<li><a href="#!how-to-include">How to include</a>
 		</ul>
 	</div>
 	{% include en/doc_menu.html %}
 	<a href="#!matreshka-magic" data-since="1.1">MatreshkaMagic</a>
 	<a>Tutorial (really soon)</a>
-	<a href="#!examples">Examples</a>
 	<a href="#!faq">FAQ</a>
 	<a href="#!caniuse">Supported browsers</a>
 	<a href="https://github.com/finom/matreshka/releases">What's new?</a>
