--- a/src/_includes/ru/nav.html
+++ b/src/_includes/ru/nav.html
@@ -11,13 +11,12 @@
 	<div class="submenu-wrapper">
 		<ul data-submenu="!getting-started">
 			<li><a href="#!hello-world">Hello World</a>
-			<li><a href="#!todomvc">TodoMVC</a>
+			<li><a href="#!examples">Примеры</a>
 			<li><a href="#!how-to-include">Как подключить</a>
 		</ul>
 	</div>
 	{% include ru/doc_menu.html %}
 	<a href="#!matreshka-magic" data-since="1.1">MatreshkaMagic</a>
-	<a href="#!examples">Примеры</a>
 	<a href="#!10-reasons">10 причин попробовать</a>
 	<a href="#!whats-new">Что нового?</a>
 	<a href="#!faq">FAQ</a>
