removed todomvc folder; added links to twitter

--- a/src/_includes/en/promo.html
+++ b/src/_includes/en/promo.html
@@ -17,6 +17,7 @@ app.x = 'Two-way data binding in JS? O rly?';
 		</p>
 
 		<p><a href="https://gitter.im/matreshkajs/matreshka/">Join Matreshka chat</a></p>
+		<p><a href="https://twitter.com/matreshkajs">@matreshkajs in Twitter</a></p>
 
 		<div class="sponsors">
 			<h3>Who's helping to the project?</h3>
