releasing the new version

--- a/src/_includes/ru/doc_content.html
+++ b/src/_includes/ru/doc_content.html
@@ -12434,6 +12434,9 @@ magic.mediate(object, 'z', Number);
 <p>1) Благодаря использованию акцессоров в качестве "слушателя" данных Матрешка сильно выигрывает у фреймворков, использующих другие подходы (например, dirty-checking).</p>
 <p>2) Матрешка напрямую меняет DOM и, при увеличении количества байндингов, скорость приложения уменьшается по линейному закону. Этот способ взаимодействия с элементами на странице ставится в противоположность решений на основе "посредников" между объектной моделью документа и данными. Во фреймворках, использующих так называемый "virtual DOM", при большом количестве элементов (например, при рендеринге коллекций), скорость падает по экспоненте, отбирая у разработчика возможность работы с большими массивами данных.</p>
 <h3>10. Поддержка синтаксиса ECMAScript 2015</h3><p>Поддержка JavaScript следующего поколения является одной из самых приоритетных задач. На сегодняшний день, Матрешка, кроме основных возможностей ECMAScript 2015/7, поддерживает классы и циклы <code>for..of</code>. В дальнейшем, при развитии языка ES, новые возможности будут добавляться в первую очередь.</p></article><article id="!whats-new"><h2><a href="#!whats-new">Что нового?</a></h2><p>Не забывайте голосовать за новые возможности в <a href="https://trello.com/b/E5KcQESk/matreshka-js-features">trello</a>.</p>
+<h3><a href="https://github.com/finom/matreshka/releases/tag/v1.3.3">Матрешка 1.3.3</a></h3><ul>
+<li>Исправлен баг рендеринга коллекций и вызова события <code>modify</code> при использовании методов <code>reverse</code> и <code>sort</code></li>
+</ul>
 <h3><a href="https://github.com/finom/matreshka/releases/tag/v1.3.2">Матрешка 1.3.2</a></h3><ul>
 <li>Устранена проблема "Cannot find module 'matreshka'" при использовании Browserify.</li>
 </ul>
