- Added "Advanced mode" checkbox - Hidden performance graph - Added docs for 1.4 - Other minor  changes

--- a/src/_includes/en/performance.html
+++ b/src/_includes/en/performance.html
@@ -1,4 +1,4 @@
-<div class="perf-graph-wrapper" data-since="1.1">
+<div class="perf-graph-wrapper hide" data-since="1.1">
     <div class="perf-graph">
         <div class="column mk">
             <span class="fw-name">Matreshka</span>
