--- a/src/_includes/ru/nav.html
+++ b/src/_includes/ru/nav.html
@@ -5,7 +5,8 @@
 	<span class="version-switcher hide">
 		<span data-value="stable" class="checked">Стабильная</span><span data-value="unstable">1.1 Beta</span>
 	</span>
-	<a href="#!home">Начало</a>
+	<span class="nav-heading">Старт</span>
+	<a href="#!home">Главная</a>
 	<a href="#!introduction">Введение</a>
 	<a href="#!getting-started">С чего начать? <span class="expand"></span><span class="hidden-active-child"></span></a>
 	<div class="submenu-wrapper">
@@ -15,14 +16,30 @@
 			<li><a href="#!how-to-include">Как подключить</a>
 		</ul>
 	</div>
-	{% include ru/doc_menu.html %}
+
+	<hr>
+	<span class="nav-heading">API</span>
+	<label class="doc-importance">
+		<input type="checkbox"> Продвинутый режим <a href="#!getting-started">(?)</a>
+	</label>
+	<div class="api">{% include ru/doc_menu.html %}</div>
 	<a href="#!matreshka-magic" data-since="1.1">MatreshkaMagic</a>
-	<a href="#!10-reasons">10 причин попробовать</a>
+
+	<hr>
+	<span class="nav-heading">Информация</span>
 	<a href="#!whats-new">Что нового?</a>
 	<a href="#!faq">FAQ</a>
 	<a href="#!caniuse">Поддержка браузерами</a>
-	<a href="forum/" target="_blank" class="forum-link">Форум</a>
+
+	<hr>
+	<span class="nav-heading">Статьи</span>
 	<a href="http://habrahabr.ru/company/matreshka/blog/254889/">Туториал</a>
+	<a href="http://habrahabr.ru/company/matreshka/blog/254927/">10 причин попробовать</a>
+	<a href="http://habrahabr.ru/company/matreshka/blog/267513/">События</a>
+
+	<hr>
+	<span class="nav-heading">Ссылки</span>
+	<a href="forum/" target="_blank" class="forum-link">Форум</a>
 	<a href="//matreshka.io" class="another-language"><i></i> English version</a>
 	<a>Обновлено {{site.time | date: "%Y-%m-%d" }}</a>
 </nav>
