--- a/template/tmpl/method.html
+++ b/template/tmpl/method.html
@@ -1,5 +1,6 @@
 <?js var link = obj.longname.replace( '#', '-' ); ?>
-<article class="item method" id="!<?js= link ?>" data-since="<?js= obj.since ?>">
+<article class="item method" id="!<?js= link ?>" <?js if(obj.since) {?>data-since="<?js= obj.since ?>"<?js } ?>
+<?js if(obj.importance) {?>data-importance="<?js= obj.importance ?>"<?js } ?>>
 	<h2>
 		<a href="#!<?js= link ?>">
 			<?js=
@@ -11,8 +12,6 @@
 				}).join( ', ' ) ?></span>)
 				<?js } else { ?>()<?js } ?>
 		</a> <?js= obj.returns ? '<span class="returns">→ ' + this.partial( 'params.html', obj.returns[0] ) + '</span>' : '' ?>
-		<?js= obj.important ? '<i class="important" title="'+this.lang.important+'"></i>' : '' ?>
-		<?js= obj.cool ? '<i class="cool" title="'+this.lang.cool+'"></i>' : '' ?>
 		<span class="new-badge"></span>
 	</h2>
 	<?js if(obj.since) {?>
