--- a/src/_includes/en/nav.html
+++ b/src/_includes/en/nav.html
@@ -5,6 +5,7 @@
 	<span class="version-switcher hide">
 		<span data-value="stable" class="checked">Stable version</span><span data-value="unstable">1.1 Beta</span>
 	</span>
+	<span class="nav-heading">Start</span>
 	<a href="#!home">Home</a>
 	<a href="#!introduction">Introduction</a>
 	<a href="#!getting-started">Getting started <span class="expand"></span><span class="hidden-active-child"></span></a>
@@ -15,11 +16,26 @@
 			<li><a href="#!how-to-include">How to include</a>
 		</ul>
 	</div>
-	{% include en/doc_menu.html %}
+
+	<hr>
+	<span class="nav-heading">API</span>
+	<label class="doc-importance">
+		<input type="checkbox"> Advanced mode  <a href="#!getting-started">(?)</a>
+	</label>
+	<div class="api">{% include en/doc_menu.html %}</div>
 	<a href="#!matreshka-magic" data-since="1.1">MatreshkaMagic</a>
-	<a>Tutorial (really soon)</a>
+
+	<hr>
+	<span class="nav-heading">Info</span>
 	<a href="#!faq">FAQ</a>
 	<a href="#!caniuse">Supported browsers</a>
+
+	<hr>
+	<span class="nav-heading">Articles</span>
+	<a>Coming soon...</a>
+
+	<hr>
+	<span class="nav-heading">Links</span>
 	<a href="https://github.com/finom/matreshka/releases">What's new?</a>
 	<a href="forum/" target="_blank" class="forum-link">Forum</a>
 	<a href="//ru.matreshka.io" class="another-language"><i></i> In Russian</a>
