--- a/src/_includes/ru/performance.html
+++ b/src/_includes/ru/performance.html
@@ -1,4 +1,4 @@
-<div class="perf-graph-wrapper" data-since="1.1">
+<div class="perf-graph-wrapper hide" data-since="1.1">
     <div class="perf-graph">
         <div class="column mk">
             <span class="fw-name">Matreshka</span>
