--- a/src/sass/site/_common.scss
+++ b/src/sass/site/_common.scss
@@ -3,6 +3,20 @@ $header-height: 56px;
 $primary-color: #8BC34A;
 $secondary-color: #ef5350;
 $text-color: rgba(#000,.9);
+$gray-color: rgba(0, 0, 0, 0.1);
+
+.imp-level-1 {
+	background-image: inline-image("imp-level-1.svg")
+}
+
+.imp-level-2 {
+	background-image: inline-image("imp-level-2.svg")
+}
+
+.imp-level-3 {
+	background-image: inline-image("imp-level-3.svg")
+}
+
 
 @mixin sidebar-animation($property) {
 	@include transition-property($property);
@@ -14,7 +28,7 @@ $text-color: rgba(#000,.9);
 
 .hide {
 	display: none !important;
-}
+} 
 
 
 * { box-sizing: border-box; }
@@ -103,20 +117,6 @@ pre {
 
 a {
 	text-decoration: none;
-}
-
-i.important {
-	font-size: 1.5rem;
-	margin-left: 2px;
-	color: $secondary-color;
-	@extend .mdi, .mdi-content-flag;
-}
-
-i.cool {
-	font-size: 1.5rem;
-	margin-left: 2px;
-	color: #1E88E5;
-	@extend .mdi, .mdi-action-thumb-up;
 }
 
 .modal {
