--- a/template/tmpl/class.html
+++ b/template/tmpl/class.html
@@ -1,32 +1,32 @@
-<section>
-	<article class="item class" id="!<?js= obj.longname ?>">
-		<h2>
-			<a href="#!<?js= obj.longname ?>">
-				<span class="signature-class"><?js= this.lang.class ?></span> <?js= obj.longname ?>
-			</a>
-			<?js= obj.important ? '<i class="important" title="'+this.lang.important+'"></i>' : '' ?>
-		</h2>
-		<div class="description">
-			<?js= obj.description ?>
-		</div>
-		<?js print( this.partial( 'arguments.html', obj.params ) ); ?>
-		<?js print( this.partial( 'see.html', obj.see ) ) ?>
-		<?js print( this.partial( 'examples.html', obj.examples ) ) ?>
-		<?js print( this.partial( 'comments.html', { link: obj.longname, title: this.lang.class + ' ' + obj.longname }) ) ?>
-	</article>
-	<?js obj.instanceMembers.member.forEach( function( member ) {
-		print( this.partial( 'property.html', member ) )
-	}, this ); ?>
-	<?js obj.instanceMembers['function'].forEach( function( member ) {
-		print( this.partial( 'method.html', member ) )
-	}, this ); ?>
-	<?js obj.staticMembers.member.forEach( function( member ) {
-		print( this.partial( 'property.html', member ) )
-	}, this ); ?>
-	<?js obj.staticMembers['function'].forEach( function( member ) {
-		print( this.partial( 'method.html', member ) )
-	}, this ); ?>
-	<?js if( obj.binders ) {
-		print( this.partial( 'ns.html', obj.binders ) )
-	} ?>
-</section>
+<article
+	class="item class"
+	id="!<?js= obj.longname ?>"
+	<?js if(obj.importance) {?>data-importance="<?js= obj.importance ?>"<?js } ?>>
+	<h2>
+		<a href="#!<?js= obj.longname ?>">
+			<span class="signature-class"><?js= this.lang.class ?></span> <?js= obj.longname ?>
+		</a>
+	</h2>
+	<div class="description">
+		<?js= obj.description ?>
+	</div>
+	<?js print( this.partial( 'arguments.html', obj.params ) ); ?>
+	<?js print( this.partial( 'see.html', obj.see ) ) ?>
+	<?js print( this.partial( 'examples.html', obj.examples ) ) ?>
+	<?js print( this.partial( 'comments.html', { link: obj.longname, title: this.lang.class + ' ' + obj.longname }) ) ?>
+</article>
+<?js obj.instanceMembers.member.forEach( function( member ) {
+	print( this.partial( 'property.html', member ) )
+}, this ); ?>
+<?js obj.instanceMembers['function'].forEach( function( member ) {
+	print( this.partial( 'method.html', member ) )
+}, this ); ?>
+<?js obj.staticMembers.member.forEach( function( member ) {
+	print( this.partial( 'property.html', member ) )
+}, this ); ?>
+<?js obj.staticMembers['function'].forEach( function( member ) {
+	print( this.partial( 'method.html', member ) )
+}, this ); ?>
+<?js if( obj.binders ) {
+	print( this.partial( 'ns.html', obj.binders ) )
+} ?>
