--- a/src/_includes/ru/doc_content.html
+++ b/src/_includes/ru/doc_content.html
@@ -10,7 +10,7 @@
 <p>В этой документации этот недочет решен. Документация разбита на три уровня "продвинутости".</p>
 <h3><i class="imp-level-1"></i> Первый уровень - самое важное</h3><p>Изучив самые важные свойства и методы, вы можете смело приступать к работе. С классами, методами и свойствами, помеченными значком <i class="imp-level-1"></i> необходимо разобраться в первую очередь.</p>
 <h3><i class="imp-level-2"></i> Второй уровень - рекомендуется изучить</h3><p>После того, как вы освоили необходимые для быстрого старта возможности, можете ознакомиться с другими свойствами и методами Матрешки.</p>
-<h3><i class="imp-level-3"></i> Третий уровень - остальные методы и свойства</h3><p>Для того, чтоб не пугать новичков вещами, которые используются достаточно редко, все неважные методы и свойства по умолчанию скрыты. Если вы хотите знать о фреймворке всё, без исключения, клиените на "Продвинутый режим" слева, в меню.</p>
+<h3><i class="imp-level-3"></i> Третий уровень - остальные методы и свойства</h3><p>Для того, чтоб не пугать новичков вещами, которые используются достаточно редко, все неважные методы и свойства по умолчанию скрыты. Если вы хотите знать о фреймворке всё, без исключения, кликните на "Продвинутый режим" слева, в меню.</p>
 <blockquote>
 <p>Потрясающие возможности HTML5 не обошли стороной и эту страницу. Она доступна оффлайн для любого устройства, от вашего компьютера до мобильного телефона.</p>
 <p><strong>Chrome для Android</strong>: зайдите в меню и нажмите "Добавить на главный экран" или "Add to home screen"</p>
